--- a/data-ingestion-pipeline/pyproject.toml
+++ b/data-ingestion-pipeline/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "pandas>=2.3.3",
     "pymysql>=1.1.2",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.45",
